# carapace

./: .gitignore  Cargo.toml  LAUNCH_CHECKLIST.md  LAUNCH_RUNBOOK.md  README.md  RELEASE_VALIDATION.md  SECURITY.md  V2_ROADMAP.md
.github/workflows/: ci.yml  publish.yml  release.yml
deploy/: saferouter.service
examples/demo-feed/: certify-pubkey.b64  providers.json  registry.json
rules/: blocklist.json  default.json
scripts/: capture-demo.ps1  capture-demo.sh  smoke-release.ps1  verify-release-artifact.ps1  verify-release-artifact.sh
site/: app.js  index.html  styles.css
src/: asset.rs  audit.rs  canary.rs  capability_matrix.rs  certify.rs  cli.rs  correlation.rs  deep_scan.rs  defense.rs  defense_log.rs  enforcement.rs  feed.rs  fuzz.rs  history.rs  identity.rs  inspect.rs  judge.rs  lib.rs  main.rs  mcp_policy.rs  mockevil.rs  monitor.rs  normalize.rs  paths.rs  policy.rs  probes.rs  protocol.rs  provenance.rs  proxy.rs  quarantine.rs  record.rs  registry.rs  scan.rs  score.rs  self_fuzz.rs  sentinel.rs  session.rs  session_graph.rs  telemetry.rs  web.rs
src/protocol/: anthropic.rs  openai.rs  passthrough.rs
src/protocol/ws/: mod.rs  openai_realtime.rs  passthrough.rs
tests/: defense_e2e_chain.rs  e2e_chunked_bypass.rs  e2e_declared_tool_passes.rs
