[package]
name = "safeproxy"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
description = "SafeRouter — local LLM firewall with provenance tracking, capability matrix, and decoy canaries"
homepage = "https://saferouter.io"
repository = "https://github.com/TaroHarado/SafeRouter"
keywords = ["ai", "security", "llm", "proxy", "prompt-injection", "firewall", "agent-safety", "red-team"]
categories = ["command-line-utilities", "network-programming", "cryptography"]
authors = ["TaroHarado"]

[[bin]]
name = "sr"
path = "src/main.rs"

[lib]
name = "safeproxy"
path = "src/lib.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/sr-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
tower = "0.5"
hyper = { version = "1.5", features = ["server", "client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
http = "1.1"
http-body = "1.0"
http-body-util = "0.1"
bytes = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
regex = "1.11"
zeroize = { version = "1.8", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
time = { version = "0.3", features = ["serde-human-readable", "formatting", "parsing", "macros"] }
once_cell = "1.20"
async-stream = "0.3"
futures-core = "0.3"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2.1", features = ["std", "rand_core"] }
base64 = "0.22"
sysinfo = "0.32"
chacha20poly1305 = { version = "0.10", features = ["std", "alloc", "rand_core"] }
rand_core = { version = "0.6", features = ["std"] }
rand = "0.8"
sled = "0.34"
uuid = { version = "1.11", features = ["v4", "serde"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true